--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                             <div class="loc">Aurora, CO</div>
                         </div>
                         <div class="clear desc">
-                            Rebuilt and redesigned legacy order management system from the ground up using
+                            Rebuilt and redesigned legacy ERP system from the ground up using
                             modern JavaScript libraries (Backbone.js/Bootstrap) and LAMP stack (Linux,
                             Apache, MySQL, PHP). Also integrated in accounting software, analytic software
                             and inventory tracking hardware to provide a full suite capable of managing the
