--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                             <div class="job_title">Senior Software Engineer</div>
                         </div>
                         <div class="right">
-                            <div class="title">Nov, 2014 - Current</div>
+                            <div class="title">Nov, 2014 - Nov, 2015</div>
                             <div class="loc">Aurora, CO</div>
                         </div>
                         <div class="clear desc">
