--- a/index.html
+++ b/index.html
@@ -351,11 +351,10 @@
                             <div class="loc">Aurora, CO</div>
                         </div>
                         <div class="clear desc">
-                            Rebuilt and redesigned legacy ERP system from the ground up using
-                            modern JavaScript libraries (Backbone.js/Bootstrap) and LAMP stack (Linux,
-                            Apache, MySQL, PHP). Also integrated in accounting software, analytic software
-                            and inventory tracking hardware to provide a full suite capable of managing the
-                            whole business.
+                            Stabilized legacy ERP built with ASP Classic, PHP and SQL Server. Developed transission 
+                            plan from SQL Server and ASP Classic to full LAMP stack (Linux, Apache, MySQL, PHP). Also 
+                            integrated in accounting software, printing hardware and security token hardware in to 
+                            legacy ERP system.
                         </div>
                     </div>
                     <div class="job_padding"></div>
