--- a/index.html
+++ b/index.html
@@ -414,7 +414,6 @@
                     <span class="font2">Silex</span>
                     <span class="font3">JavaScript</span>
                     <span class="font1">Zend</span>
-                    <span class="font1">Kanban</span>
                     <span class="font1">LESS</span>
                     <span class="font3">CSS</span>
                     <span class="font1">Apache</span>
@@ -433,6 +432,8 @@
                     <span class="font3">Oracle</span>
                     <span class="font1">API</span>
                     <span class="font2">Linux</span>
+                    <span class="font1">Kanban</span>
+                    <span class="font2">SASS</span>
                 </div>
             </section>
             <section id="section4">
