Updates to resume

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             }
 
             section {
-                padding-bottom: 10px;
+                padding-bottom: 6px; /* Adjust height here */
                 clear: both;
                 width: 100%;
                 display: inline-block;
@@ -117,7 +117,7 @@
             }
 
             #section1 {
-                /*height: 250px;*/
+                height: 150px; /* Adjust height here */
                 padding-left: 5px;
                 padding-right: 5px;
             }
@@ -130,8 +130,15 @@
             #section1b {
                 font-size: 30px;
                 width: 50%;
+                height: 100%;
                 float: right;
                 text-align: right;
+                position: relative;
+            }
+
+            #section1b div {
+                position: absolute;
+                width: 100%;
             }
 
             #section4 {
@@ -139,7 +146,7 @@
             }
 
             #developer_name {
-                font-size: 70px;
+                font-size: 55px;
                 font-weight: bold;
             }
 
@@ -176,7 +183,7 @@
 
             .section_description {
                 float: right;
-                padding: 8px;
+                padding: 5px 10px 5px 10px; /* Adjust height here */
                 text-align: justify;
                 width: calc(100% - 210px);
                 border-top: 2px solid black;
@@ -188,7 +195,7 @@
             }
 
             .job_padding {
-                height: 10px;
+                height: 5px; /* Adjust height here */
             }
 
             .job_company {
@@ -258,17 +265,17 @@
             }
 
             .font1 {
-                font-size: small;
+                font-size: 13px;
                 font-weight: normal;
             }
 
             .font2 {
-                font-size: large;
+                font-size: 17px;
                 font-weight: normal;
             }
 
             .font3 {
-                font-size: x-large;
+                font-size: 21px;
                 font-weight: 600;
             }
 
@@ -327,20 +334,39 @@
                     <div id="developer_name">BRANDON<br>SKRTICH</div>
                     <div id="developer_title">WEB DEVELOPER</div>
                 </div>
-                <div id="section1b">
-                    <a href="tel:+17203620848">
-                        720.362.0848
-                    </a>
-                    <br>
-                    <span style="line-height: 85px;">bskrtich<i class="fa fa-at" style="font-size: 22px;"></i>gmail.com</span>
-                    <br>
-                    11530 Benton Ct<br>
-                    Broomfield, CO
+                <div id="section1b" style="position:relative">
+                    <div>
+                        <a href="tel:+17203620848">
+                            720.362.0848
+                        </a>
+                    </div>
+                    <div style="top: calc(50% - 30px);">
+                        bskrtich<i class="fa fa-at" style="font-size: 22px;"></i>gmail.com
+                    </div>
+                    <div style="bottom: 0;">
+                        11530 Benton Ct<br>
+                        Broomfield, CO
+                    </div>
                 </div>
             </section>
             <section id="section2">
                 <div class="section_title titlefont">Experience</div>
                 <div class="section_description">
+                    <div class="job">
+                        <div class="left">
+                            <div class="job_company">Return Path</div>
+                            <div class="job_title">Software Engineer</div>
+                        </div>
+                        <div class="right">
+                            <div class="title">Dec, 2015 - Current</div>
+                            <div class="loc">Broomfield, CO</div>
+                        </div>
+                        <div class="clear desc">
+                            Developed and maintained REST API (api.returnpath.com) using AWS, Docker, CentOS, PHP and Oracle.
+                            Deep trouble shooting of both front end and back end system.
+                        </div>
+                    </div>
+                    <div class="job_padding"></div>
                     <div class="job">
                         <div class="left">
                             <div class="job_company">Distributor Wire &amp; Cable</div>
@@ -351,9 +377,9 @@
                             <div class="loc">Aurora, CO</div>
                         </div>
                         <div class="clear desc">
-                            Stabilized legacy ERP built with ASP Classic, PHP and SQL Server. Developed transission 
-                            plan from SQL Server and ASP Classic to full LAMP stack (Linux, Apache, MySQL, PHP). Also 
-                            integrated in accounting software, printing hardware and security token hardware in to 
+                            Stabilized legacy ERP built with ASP Classic, PHP and SQL Server. Developed transission
+                            plan from SQL Server and ASP Classic to full LAMP stack (Linux, Apache, MySQL, PHP). Also
+                            integrated in accounting software, printing hardware and security token hardware in to
                             legacy ERP system.
                         </div>
                     </div>
@@ -413,7 +439,7 @@
                     <span class="font3">PHP</span>
                     <span class="font2">Silex</span>
                     <span class="font3">JavaScript</span>
-                    <span class="font1">Zend</span>
+                    <span class="font1">Kanban</span>
                     <span class="font1">LESS</span>
                     <span class="font3">CSS</span>
                     <span class="font1">Apache</span>
@@ -427,13 +453,13 @@
                     <span class="font3">MySQL</span>
                     <span class="font2">AJAX</span>
                     <span class="font2">angular.js</span>
-                    <span class="font1">LAMP Stack</span>
+                    <span class="font3">LAMP</span>
                     <span class="font2">REST</span>
                     <span class="font3">Oracle</span>
                     <span class="font1">API</span>
                     <span class="font2">Linux</span>
-                    <span class="font1">Kanban</span>
-                    <span class="font2">SASS</span>
+                    <span class="font1">AWS</span>
+                    <span class="font2">Docker</span>
                 </div>
             </section>
             <section id="section4">
