--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                             <div class="loc">Aurora, CO</div>
                         </div>
                         <div class="clear desc">
-                            Stabilized legacy ERP built with ASP Classic, PHP and SQL Server. Developed transission
+                            Stabilized legacy ERP built with ASP Classic, PHP and SQL Server. Developed transition
                             plan from SQL Server and ASP Classic to full LAMP stack (Linux, Apache, MySQL, PHP). Also
                             integrated in accounting software, printing hardware and security token hardware in to
                             legacy ERP system.
