--- a/index.html
+++ b/index.html
@@ -362,7 +362,9 @@
                             <div class="loc">Broomfield, CO</div>
                         </div>
                         <div class="clear desc">
-                            Developed and maintained REST API (api.returnpath.com) using Docker, CentOS, PHP and Oracle. Upgraded backend systems to use Kubernetes and Docker for modularized approach to system management. Deep trouble shooting of both front end and back end system.
+                            Developed and maintained REST API (api.returnpath.com) using Docker, Debian, PHP and
+                            Oracle. Upgraded backend systems to use Kubernetes and Docker for modularized approach to
+                            system management. Deep trouble shooting of both front end and back end system.
                         </div>
                     </div>
                     <div class="job_padding"></div>
@@ -459,6 +461,7 @@
                     <span class="font2">Linux</span>
                     <span class="font2">Kubernetes</span>
                     <span class="font3">Docker</span>
+                    <span class="font2">Debian</span>
                 </div>
             </section>
             <section id="section4">
