Adjust spacing, change title, fix skill cloud spacing

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
             }
 
             section {
-                padding-bottom: 6px; /* Adjust height here */
+                padding-bottom: 6px;
+                margin-bottom: 10px;
                 clear: both;
                 width: 100%;
                 display: inline-block;
@@ -151,7 +152,7 @@
             }
 
             #developer_title {
-                font-size: 35px;
+                font-size: 30px;
             }
 
             .left {
@@ -192,6 +193,7 @@
             .job {
                 width: 100%;
                 display: inline-block;
+                margin-bottom: 5px;
             }
 
             .job_padding {
@@ -332,7 +334,7 @@
             <section id="section1" class="titlefont">
                 <div id="section1a">
                     <div id="developer_name">BRANDON<br>SKRTICH</div>
-                    <div id="developer_title">WEB DEVELOPER</div>
+                    <div id="developer_title">SOFTWARE ENGINEER</div>
                 </div>
                 <div id="section1b" style="position:relative">
                     <div>
@@ -340,11 +342,10 @@
                             720.362.0848
                         </a>
                     </div>
-                    <div style="top: calc(50% - 30px);">
+                    <div style="top: calc(60% - 30px);">
                         bskrtich<i class="fa fa-at" style="font-size: 22px;"></i>gmail.com
                     </div>
                     <div style="bottom: 0;">
-                        11530 Benton Ct<br>
                         Broomfield, CO
                     </div>
                 </div>
@@ -435,18 +436,19 @@
             </section>
             <section id="section3">
                 <div class="section_title titlefont">Skills</div>
-                <div class="section_description">
-                    <span class="font2">Backbone.js</span>
+                <div class="section_description" style="text-align-last: justify;">
+                    <span class="font2">API</span>
                     <span class="font3">PHP</span>
                     <span class="font2">Silex</span>
                     <span class="font3">JavaScript</span>
+                    <span class="font2">Backbone.js</span>
                     <span class="font1">Kanban</span>
                     <span class="font1">LESS</span>
                     <span class="font3">CSS</span>
                     <span class="font1">Apache</span>
                     <span class="font3">Agile</span>
                     <span class="font2">PostgreSQL</span>
-                    <span class="font1">SQL</span>
+                    <span class="font2">SQL</span>
                     <span class="font3">HTML</span>
                     <span class="font2">jQuery</span>
                     <span class="font1">Git</span>
@@ -457,7 +459,6 @@
                     <span class="font3">LAMP</span>
                     <span class="font2">REST</span>
                     <span class="font3">Oracle</span>
-                    <span class="font1">API</span>
                     <span class="font2">Linux</span>
                     <span class="font2">Kubernetes</span>
                     <span class="font3">Docker</span>
