--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         <style>
             body {
                 margin: 0;
-                background-color: #DDD;
             }
 
             div {
@@ -54,6 +53,10 @@
             }
 
             @media screen {
+                body {
+                    background-color: #DDD;
+                }
+
                 main {
                     width: 750px;
 
@@ -104,8 +107,8 @@
             }
 
             section {
-                padding-bottom: 6px;
-                margin-bottom: 10px;
+                /*padding-bottom: 6px;*/
+                /*margin-bottom: 10px;*/
                 clear: both;
                 width: 100%;
                 display: inline-block;
@@ -118,7 +121,7 @@
             }
 
             #section1 {
-                height: 150px; /* Adjust height here */
+                height: 130px; /* Adjust height here */
                 padding-left: 5px;
                 padding-right: 5px;
             }
@@ -147,7 +150,7 @@
             }
 
             #developer_name {
-                font-size: 55px;
+                font-size: 40px;
                 font-weight: bold;
             }
 
@@ -231,6 +234,7 @@
             }
 
             .desc {
+                font-size: 13px;
                 padding-left: 2px;
                 padding-right: 2px;
             }
@@ -355,11 +359,25 @@
                 <div class="section_description">
                     <div class="job">
                         <div class="left">
+                            <div class="job_company">CA Technologies</div>
+                            <div class="job_title">Software Engineer</div>
+                        </div>
+                        <div class="right">
+                            <div class="title">May, 2017 - Current</div>
+                            <div class="loc">Boulder, CO</div>
+                        </div>
+                        <div class="clear desc">
+                            Maintain and updated back-end systems written in clojure. Transitioned services from VM infrastucture to Openshift. Also updated and maintained CI and deployments.
+                        </div>
+                    </div>
+                    <div class="job_padding"></div>
+                    <div class="job">
+                        <div class="left">
                             <div class="job_company">Return Path</div>
                             <div class="job_title">Software Engineer</div>
                         </div>
                         <div class="right">
-                            <div class="title">Dec, 2015 - Current</div>
+                            <div class="title">Dec, 2015 - May, 2017</div>
                             <div class="loc">Broomfield, CO</div>
                         </div>
                         <div class="clear desc">
