--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://cdn.jsdelivr.net/jquery.color-animation/1/mainfile"></script>
 
         <link href="https://cdnjs.cloudflare.com/ajax/libs/tooltipster/3.3.0/css/tooltipster.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Jura:400,500,600" rel="stylesheet" type="text/css">
 
         <link rel="icon" type="image/png" href="bs-icon.png">
@@ -71,8 +71,16 @@
             }
 
             @media print {
-                main {
+                html, body {
                     width: 100%;
+                    height: 100%;
+                    margin: 0px;
+                }
+
+                main {
+                    position: relative;
+                    width: 100%;
+                    height: 100%;
                     margin: 0;
                     padding: 0;
                 }
@@ -99,6 +107,12 @@
 
                 footer {
                     display: block;
+                    position: absolute;
+                    padding-left: inherit;
+                    padding-right: inherit;
+                    left: 0;
+                    right: 0;
+                    bottom: 0px;
                 }
 
                 .tooltipster-custom {
@@ -108,7 +122,7 @@
 
             section {
                 /*padding-bottom: 6px;*/
-                /*margin-bottom: 10px;*/
+                margin-bottom: 15px;
                 clear: both;
                 width: 100%;
                 display: inline-block;
@@ -342,9 +356,7 @@
                 </div>
                 <div id="section1b" style="position:relative">
                     <div>
-                        <a href="tel:+17203620848">
-                            720.362.0848
-                        </a>
+                        720<i class="fa fa-circle" style="font-size: 4px;"></i>362<i class="fa fa-circle" style="font-size: 4px;"></i>0848
                     </div>
                     <div style="top: calc(60% - 30px);">
                         bskrtich<i class="fa fa-at" style="font-size: 22px;"></i>gmail.com
@@ -360,14 +372,16 @@
                     <div class="job">
                         <div class="left">
                             <div class="job_company">CA Technologies</div>
-                            <div class="job_title">Software Engineer</div>
+                            <div class="job_title">Senior Software Engineer</div>
                         </div>
                         <div class="right">
                             <div class="title">May, 2017 - Current</div>
                             <div class="loc">Boulder, CO</div>
                         </div>
                         <div class="clear desc">
-                            Maintain and updated back-end systems written in clojure. Transitioned services from VM infrastucture to Openshift. Also updated and maintained CI and deployments.
+                            Dockerized full SASS production system for use as on premise
+                            solution using Replicated.io and Docker Swarm.
+                            Managed CI/CD system for multiple applications using Jenkins.
                         </div>
                     </div>
                     <div class="job_padding"></div>
@@ -382,7 +396,7 @@
                         </div>
                         <div class="clear desc">
                             Developed and maintained REST API (api.returnpath.com) using Docker, Debian, PHP and
-                            Oracle. Upgraded backend systems to use Kubernetes and Docker for modularized approach to
+                            Oracle. Migrated backend systems to use Kubernetes and Docker for modularized approach to
                             system management. Deep trouble shooting of both front end and back end system.
                         </div>
                     </div>
@@ -397,10 +411,9 @@
                             <div class="loc">Aurora, CO</div>
                         </div>
                         <div class="clear desc">
-                            Stabilized legacy ERP built with ASP Classic, PHP and SQL Server. Developed transition
-                            plan from SQL Server and ASP Classic to full LAMP stack (Linux, Apache, MySQL, PHP). Also
-                            integrated in accounting software, printing hardware and security token hardware in to
-                            legacy ERP system.
+                            Stabilized legacy ERP built with ASP Classic, PHP and SQL Server.
+                            Developed transition plan from SQL Server and ASP Classic to full
+                            LAMP stack (Linux, Apache, MySQL, PHP).
                         </div>
                     </div>
                     <div class="job_padding"></div>
@@ -446,8 +459,9 @@
                             <div class="desc">Englewood, CO</div>
                         </div>
                         <div class="clear">
-                            Designed, programmed, and maintained a client/server applications along with a web portal for
-                            customer interaction and management using JavaScript, PHP and PostgreSQL.
+                            Designed, programmed, and maintained a client/server applications
+                            along with a web portal for customer management using JQuery, PHP
+                            and PostgreSQL.
                         </div>
                     </div>
                 </div>
@@ -455,32 +469,32 @@
             <section id="section3">
                 <div class="section_title titlefont">Skills</div>
                 <div class="section_description" style="text-align-last: justify;">
+                    <span class="font3">Docker</span>
+                    <span class="font2">Kubernetes</span>
+                    <span class="font2">Debian</span>
                     <span class="font2">API</span>
                     <span class="font3">PHP</span>
                     <span class="font2">Silex</span>
-                    <span class="font3">JavaScript</span>
-                    <span class="font2">Backbone.js</span>
                     <span class="font1">Kanban</span>
                     <span class="font1">LESS</span>
                     <span class="font3">CSS</span>
                     <span class="font1">Apache</span>
-                    <span class="font3">Agile</span>
                     <span class="font2">PostgreSQL</span>
+                    <span class="font3">Agile</span>
                     <span class="font2">SQL</span>
                     <span class="font3">HTML</span>
-                    <span class="font2">jQuery</span>
                     <span class="font1">Git</span>
-                    <span class="font1">Scrum</span>
                     <span class="font3">MySQL</span>
-                    <span class="font2">AJAX</span>
-                    <span class="font2">angular.js</span>
+                    <span class="font1">Scrum</span>
                     <span class="font3">LAMP</span>
                     <span class="font2">REST</span>
                     <span class="font3">Oracle</span>
-                    <span class="font2">Linux</span>
-                    <span class="font2">Kubernetes</span>
-                    <span class="font3">Docker</span>
-                    <span class="font2">Debian</span>
+                    <span class="font2">JavaScript</span>
+                    <span class="font1">Linux</span>
+                    <span class="font3">Github</span>
+                    <span class="font2">Shell Script</span>
+                    <span class="font3">HTML5</span>
+                    <span class="font2">Python3</span>
                 </div>
             </section>
             <section id="section4">
