--- a/index.html
+++ b/index.html
@@ -369,13 +369,29 @@
             <section id="section2">
                 <div class="section_title titlefont">Experience</div>
                 <div class="section_description">
+                <div class="job">
+                        <div class="left">
+                            <div class="job_company">SunteckTTS</div>
+                            <div class="job_title">DevOps Engineer</div>
+                        </div>
+                        <div class="right">
+                            <div class="title">Oct, 2018 - Current</div>
+                            <div class="loc">Jacksonville, FL</div>
+                        </div>
+                        <div class="clear desc">
+                                Managed corporate wide infrastructure on AWS.
+                                Transition application stack to docker swarm.
+                                Develop and implement disaster recovery procedures.
+                        </div>
+                    </div>
+                    <div class="job_padding"></div>
                     <div class="job">
                         <div class="left">
                             <div class="job_company">CA Technologies</div>
                             <div class="job_title">Senior Software Engineer</div>
                         </div>
                         <div class="right">
-                            <div class="title">May, 2017 - Current</div>
+                            <div class="title">May, 2017 - Oct, 2018</div>
                             <div class="loc">Boulder, CO</div>
                         </div>
                         <div class="clear desc">
@@ -470,16 +486,16 @@
                 <div class="section_title titlefont">Skills</div>
                 <div class="section_description" style="text-align-last: justify;">
                     <span class="font3">Docker</span>
-                    <span class="font2">Kubernetes</span>
-                    <span class="font2">Debian</span>
+
+                    <span class="font2">AWS</span>
                     <span class="font2">API</span>
                     <span class="font3">PHP</span>
-                    <span class="font2">Silex</span>
+                    <span class="font2">Terraform</span>
                     <span class="font1">Kanban</span>
                     <span class="font1">LESS</span>
-                    <span class="font3">CSS</span>
+                    <span class="font3">Kubernetes</span>
                     <span class="font1">Apache</span>
-                    <span class="font2">PostgreSQL</span>
+                    <span class="font1">PostgreSQL</span>
                     <span class="font3">Agile</span>
                     <span class="font2">SQL</span>
                     <span class="font3">HTML</span>
@@ -487,14 +503,15 @@
                     <span class="font3">MySQL</span>
                     <span class="font1">Scrum</span>
                     <span class="font3">LAMP</span>
-                    <span class="font2">REST</span>
+                    <span class="font2">EC2</span>
                     <span class="font3">Oracle</span>
-                    <span class="font2">JavaScript</span>
+                    <span class="font2">XOJO</span>
                     <span class="font1">Linux</span>
                     <span class="font3">Github</span>
                     <span class="font2">Shell Script</span>
-                    <span class="font3">HTML5</span>
+                    <span class="font3">RDS</span>
                     <span class="font2">Python3</span>
+                    <span class="font3">REST</span>
                 </div>
             </section>
             <section id="section4">
