--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     margin: 15px auto 15px auto;
                     padding: 25px;
                     background-color: #FFF;
+                    border: black solid 1px;
                 }
 
                 footer {
@@ -173,13 +174,13 @@
             }
 
             .left {
-                width: 50%;
+                width: 60%;
                 float: left;
                 text-align: left;
             }
 
             .right {
-                width: 50%;
+                width: 40%;
                 float: right;
                 text-align: right;
             }
@@ -274,6 +275,8 @@
                 text-align: right;
                 padding: 2px;
                 color: rgb(115, 115, 115);
+
+                border: black solid 1px;
             }
 
             .tab:hover {
@@ -352,7 +355,7 @@
             <section id="section1" class="titlefont">
                 <div id="section1a">
                     <div id="developer_name">BRANDON<br>SKRTICH</div>
-                    <div id="developer_title">SOFTWARE ENGINEER</div>
+                    <div id="developer_title">DEVOPS ENGINEER</div>
                 </div>
                 <div id="section1b" style="position:relative">
                     <div>
@@ -362,7 +365,7 @@
                         bskrtich<i class="fa fa-at" style="font-size: 22px;"></i>gmail.com
                     </div>
                     <div style="bottom: 0;">
-                        Broomfield, CO
+                        Remote - USA
                     </div>
                 </div>
             </section>
@@ -371,16 +374,16 @@
                 <div class="section_description">
                 <div class="job">
                         <div class="left">
-                            <div class="job_company">SunteckTTS</div>
-                            <div class="job_title">DevOps Engineer</div>
+                            <div class="job_company">MODE Transportation</div>
+                            <div class="job_title">Lead Scalability and Reliability Engineer</div>
                         </div>
                         <div class="right">
-                            <div class="title">Oct, 2018 - Current</div>
-                            <div class="loc">Jacksonville, FL</div>
+                            <div class="title">Aug, 2018 - Current</div>
+                            <div class="loc">Remote</div>
                         </div>
                         <div class="clear desc">
                                 Managed corporate wide infrastructure on AWS.
-                                Transition application stack to docker swarm.
+                                Rebuilt entire AWS infrastructure using Terraform and Ansible.
                                 Develop and implement disaster recovery procedures.
                         </div>
                     </div>
@@ -391,7 +394,7 @@
                             <div class="job_title">Senior Software Engineer</div>
                         </div>
                         <div class="right">
-                            <div class="title">May, 2017 - Oct, 2018</div>
+                            <div class="title">May, 2017 - Aug, 2018</div>
                             <div class="loc">Boulder, CO</div>
                         </div>
                         <div class="clear desc">
