Update email and add state

--- a/index.html
+++ b/index.html
@@ -362,10 +362,10 @@
                         720<i class="fa fa-circle" style="font-size: 4px;"></i>362<i class="fa fa-circle" style="font-size: 4px;"></i>0848
                     </div>
                     <div style="top: calc(60% - 30px);">
-                        bskrtich<i class="fa fa-at" style="font-size: 22px;"></i>gmail.com
+                        bskrtich<i class="fa fa-at" style="font-size: 22px;"></i>pm.me
                     </div>
                     <div style="bottom: 0;">
-                        Remote - USA
+                        Remote - Oregon, USA
                     </div>
                 </div>
             </section>
