Swap some skills

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                     <span class="font2">Terraform</span>
                     <span class="font1">Kanban</span>
                     <span class="font1">LESS</span>
-                    <span class="font3">Kubernetes</span>
+                    <span class="font3">Ansible</span>
                     <span class="font1">Apache</span>
                     <span class="font1">PostgreSQL</span>
                     <span class="font3">Agile</span>
@@ -508,7 +508,7 @@
                     <span class="font3">LAMP</span>
                     <span class="font2">EC2</span>
                     <span class="font3">Oracle</span>
-                    <span class="font2">XOJO</span>
+                    <span class="font2">Jenkins</span>
                     <span class="font1">Linux</span>
                     <span class="font3">Github</span>
                     <span class="font2">Shell Script</span>
