Update resume with new job

--- a/index.html
+++ b/index.html
@@ -372,13 +372,28 @@
             <section id="section2">
                 <div class="section_title titlefont">Experience</div>
                 <div class="section_description">
-                <div class="job">
+                    <div class="job">
+                        <div class="left">
+                            <div class="job_company">ADT</div>
+                            <div class="job_title">Site Reliability Engineer</div>
+                        </div>
+                        <div class="right">
+                            <div class="title">Oct, 2020 - Current</div>
+                            <div class="loc">Remote</div>
+                        </div>
+                        <div class="clear desc">
+                            Built out new applaction infrastructure in GCP using Terraform.
+                            Remediated security vulnerabilities from Laceworks. Helped
+                            transition infrastructure from AWS to GCP.
+                        </div>
+                    </div>
+                    <div class="job">
                         <div class="left">
                             <div class="job_company">MODE Transportation</div>
                             <div class="job_title">Lead Scalability and Reliability Engineer</div>
                         </div>
                         <div class="right">
-                            <div class="title">Aug, 2018 - Current</div>
+                            <div class="title">Aug, 2018 - Oct, 2020</div>
                             <div class="loc">Remote</div>
                         </div>
                         <div class="clear desc">
@@ -468,6 +483,7 @@
                         </div>
                     </div>
                     <div class="job_padding"></div>
+                    <!--
                     <div class="job">
                         <div class="left">
                             <div class="job_company">Retriever Software</div>
@@ -483,19 +499,19 @@
                             and PostgreSQL.
                         </div>
                     </div>
+                    -->
                 </div>
             </section>
             <section id="section3">
                 <div class="section_title titlefont">Skills</div>
                 <div class="section_description" style="text-align-last: justify;">
                     <span class="font3">Docker</span>
-
                     <span class="font2">AWS</span>
                     <span class="font2">API</span>
                     <span class="font3">PHP</span>
                     <span class="font2">Terraform</span>
                     <span class="font1">Kanban</span>
-                    <span class="font1">LESS</span>
+                    <span class="font2">GCP</span>
                     <span class="font3">Ansible</span>
                     <span class="font1">Apache</span>
                     <span class="font1">PostgreSQL</span>
